small fix to UI layout (title, section)

--- a/clusters-GPU/index.html
+++ b/clusters-GPU/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<div id="ui" style="visibility: hidden">
-		<p>Poliscope is looking at</p>
+		<p class="title">Poliscope is looking at</p>
 		<h3 class="gnav">who we are</h3>
 		<div id="type" class="toggle">
 			<button name="studente" class="data">students</button>
