fake interface, fix to network style, labels to clusters and tweak to wander and speed

--- a/clusters-GPU/index.html
+++ b/clusters-GPU/index.html
@@ -18,7 +18,7 @@
 		<div id="dimensionsDrawers">
 			<select name="dimensionA" id="dimensionA" class="cluster">
 				<option value="">+</option>
-				<option value="Livello">Graduate</option>
+				<option value="Livello">Degree</option>
 				<option value="Scuola">Schools</option>
 				<option value="Cittadinanza">Nationality</option>
 			</select>
@@ -27,7 +27,7 @@
 			<br/>
 			<select name="dimensionB" id="dimensionB" class="cluster">
 				<option value="">+</option>
-				<option value="Livello">Graduate</option>
+				<option value="Livello">Degree</option>
 				<option value="Scuola">Schools</option>
 				<option value="Cittadinanza">Nationality</option>
 			</select>
