--- a/network/index.html
+++ b/network/index.html
@@ -21,8 +21,13 @@
 <body>
 
 	<div id="ui" style="visibility: hidden">
-		<h3>Project's network</h3>
-		<button id="changeviewbtn">change view</button>
+		<p class="title">Poliscope is looking at</p>
+		<h3 class="gnav">active projects</h3>
+		<p>in the area of</p>
+			<p><button class="disabled toggle data">H2020</button>
+			<button class="disabled toggle data">F24</button>
+			<button class="toggle data">Didactics</button><p>
+		<button id="changeviewbtn" class="toggle facet">change view</button>
 	</div>
 	<script src="../common/js/dat.gui.min.js"></script>
 	<script src="../common/js/TweenMax.min.js"></script>
