added transitions to sankey, updated styling

--- a/network/index.html
+++ b/network/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Poliscope – Network</title>
+	<title>Poliscope - Network</title>
 	<link rel="stylesheet" href="../common/style.css">
 	<style>
 	.labelAxis {
