--- a/journey/app/index.html
+++ b/journey/app/index.html
@@ -13,10 +13,11 @@
 .link {
 	fill: none;
 	stroke-opacity: .2;
+	cursor: pointer;;
 }
 
 .link:hover {
-	stroke-opacity: 1;
+	stroke-opacity: .5;
 }
 #selectcont {
 	position: absolute;
